`控制流.md` writing

--- a/语言核心和内建模块/语言核心/控制流.md
+++ b/语言核心和内建模块/语言核心/控制流.md
@@ -136,13 +136,105 @@ for prototype[1] in 'xyz':
 
 * 在 `set` 上循环时，请勿`添加`或`删除`项(`不允许更改`)。
 
-The control target variable(s) may be rebound in the loop body, but get rebound again to the next item in the iterator at the next iteration of the loop. The loop body does not execute at all if the iterator yields no items. In this case, the control variable is not bound or rebound in any way by the for statement. However, if the iterator yields at least one item, then, when the loop statement terminates, the control variable remains bound to the last value to which the loop statement has bound it. The following code is therefore correct only when someseq is not empty:
+* `for` 循环的 `target 标识符`可以在`循环体`中被`重新绑定`，但是在循环的`下一次迭代`时 `target 标识符`会再次`重新绑定`到`迭代器`中的`下一项`。
+
+* 如果`迭代器不产生任何项`，则`循环体根本不会执行`。这时，`for` 语句`不会`以任何方式`绑定`或`重新绑定` `target 标识符`(`for` 语句`后`的代码，`不能使用` `target 标识符`)。
+
+* 如果`迭代器`产生`至少一项`，则在`循环语句结束`后，`target 标识符`仍将`绑定`到的`迭代器`发出的`最后一个值`。
 
 ```python
+# 仅当 someseq 不为空时，以下代码才是正确的
 for x in someseq:
     process(x)
 print('Last item processed was', x)
 ```
+
+### 迭代器
+
+* `迭代器`是一个`对象 i`，可以`调用 next(i)`。next(i) `返回`迭代器 i 的`下一项`，或者，当迭代器 i `没有更多项`时，`抛出 StopIteration 异常`。
+
+* 也可以`调用 next(i，default)`，在这种情况下，当迭代器 i `没有更多项`时，该调用将`返回 default`。
+
+* 编写`类`时，可以通过定义`特殊方法` `__next__`(在 `v2` 中，该方法名为 `next`，这是被认为是`设计错误`) 来使其成为`迭代器`，该方法`除 self 参数` 外`不带任何参数`，并`返回下一项`或`抛出 StopIteration 异常`。
+
+* `大多数迭代器`是通过`对内置函数 iter` 的`隐式或显式调用构建`的。`调用`一个`生成器`也会`返回`一个`迭代器`。
+
+* `for` 语句`隐式`调用 `iter` 来获得`迭代器`。
+
+```python
+for x in c:
+    statement(s)
+# 等价于
+_temporary_iterator = iter(c)
+while True:
+    try:
+        x = next(_temporary_iterator)
+    except StopIteration:
+        break
+    statement(s)
+```
+
+* 当 `iter(c)` 返回一个`迭代器 i`，`next(i)` 永远`不`会`抛出 StopIteration 异常`时，`i` 是一个`无界迭代器`，循环语句 `for x in c` 也`永远不会终止`(除非`循环体`中的语句包括 `break` 语句或 `return` 语句，或`抛出异常`，或`传播异常`)。
+
+* `iter(c)` 调用特殊方法 `c.__iter__()` 来`获取`并返回 `c` 上的`迭代器`。
+
+* 在`标准库模块 itertools` 中，可以找到许多`构建`和`操作迭代器`的`最佳方法`。
+
+### range 和 xrange
+
+* `遍历`一个`整数序列`是一项`常见`的`任务`。因此，Python 提供了`内置函数 range`(在 `v2` 中为 `xrange`。在 `v2` 中也有 `内置函数 range`，它`返回`一个`列表`) 来`生成整数序列`。
+
+```python
+# Python 中最简单的循环 n 次的方法
+for i in range(n):
+    statement(s)
+```
+
+* 在 `v2` 中，`range(x)` 返回一个`列表`，该列表的项是从 `0(包含)` 到 `x(不包含)` 的连续整数。
+
+* `range(x, y)` 返回一个列表，该列表的项是从 `x(包含)` 到 `y(不包含)` 的连续整数。当 `x 大于或等于 y` 时，结果为`空列表`。
+
+* `range(x, y, stride)` 返回一个从 `x(包含)` 到 `y(不包含)` 的整数列表(相邻两个`项`之间的`差`为 `stride`)。
+
+* 如果 `stride < 0`，则 range `从 x 到 y 递减`。
+
+* 当 `x >= y` 并且 `stride > 0` 时，或者当 `x <= y` 并且 `stride < 0` 时，range 返回`空列表`。
+
+* 当 `stride == 0` 时，range 将`抛出异常`。
+
+* 在 `v2` 中，`range` 返回可用于任何目的的`普通列表对象`，而 `xrange` 返回一个`专用对象`，该对象`仅用于迭代`(如 for 语句)。
+
+* `xrange` 本身`不返回迭代器`；但是，如果`需要`，可以通过`调用 iter(xrange(...)))` 轻松`获得`这样的迭代器。
+
+* `xrange` 返回的`专用对象`比 `range` 返回的`列表对象`消耗的`内存更少`。除了更节约内存外，可以在`任何可以使用 xrange 的地方使用 range`，但`反之`则`不行`。
+
+```python
+# 在 v2 中
+print(range(1, 5)) # 输出 [1, 2, 3, 4]
+print(xrange(1, 5)) # 输出 xrange(1, 5)
+```
+
+* 在 `v2` 中，`range` `返回`一个非常普通的`列表对象`，但是 `xrange` `返回`一个`用于特殊目的的对象`(`专用对象`)。
+
+* 在 `v3` 中，`没有 xrange 函数`，而 `v3` 中的 `range` 与 `v2` 的 `xrange` `类似`。在 `v3` 中，如果`需要`一个类似 `v2` 中 `range` 函数`返回`的`列表对象`，可以`调用 list(range(...))` 得到。
+
+### 元组生成式
+
+```python
+(i for i in range(12)) # 创建一个生成器 <generator object <genexpr> at ...>
+# 使用元组生成式创建元组。将生成器转换为元组
+tuple(i for i in range(12)) # (0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11)
+```
+
+### 列表生成式
+
+A common use of a for loop is to inspect each item in an iterable and build a new list by appending the results of an expression computed on some or all of the items. The expression form known as a list comprehension or listcomp lets you code this common idiom concisely and directly. Since a list comprehension is an expression (rather than a block of statements), you can use it wherever you need an expression (e.g., as an argument in a function call, in a return statement, or as a subexpression of some other expression).
+
+* for循环的常见用法是检查可迭代项中的每个项目，并通过将对部分或全部项目计算出的表达式的结果附加到列表中来构建新列表。 称为列表理解或listcomp的表达式形式使您可以简洁，直接地编写此常用习语。 由于列表推导是一个表达式（而不是语句块），因此可以在需要表达式的任何地方使用它（例如，用作函数调用中的参数，返回语句中或其他表达式的子表达式）。
+
+### Set 生成式
+
+### 字典生成式
 
 ## break 语句
 
