`控制流.md` writing

--- a/语言核心和内建模块/语言核心/控制流.md
+++ b/语言核心和内建模块/语言核心/控制流.md
@@ -220,25 +220,140 @@ print(xrange(1, 5)) # 输出 xrange(1, 5)
 
 ### 元组生成式
 
+* `元组生成式`语法：`tuple(expression for target in iterable lc-clauses)`。`lc-clauses` 是一系列的`子句`(`零个`或`多个`)。每个`子句`具有这`两种形式之一`：`for target in iterable`、`if expression`。`target`、`iterable` 的`含义`与标准 `for` 语句中`一样`。`if expression` 中的 `expression` 与标准 `if` 语句中`一样`。
+
 ```python
 (i for i in range(12)) # 创建一个生成器 <generator object <genexpr> at ...>
 # 使用元组生成式创建元组。将生成器转换为元组
 tuple(i for i in range(12)) # (0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11)
 ```
 
+```python
+tuple(x for l in [[1, 2, 3], ['a', 'b', 'c']] for x in l)
+# 结果为：(1, 2, 3, 'a', 'b', 'c')
+```
+
 ### 列表生成式
 
-A common use of a for loop is to inspect each item in an iterable and build a new list by appending the results of an expression computed on some or all of the items. The expression form known as a list comprehension or listcomp lets you code this common idiom concisely and directly. Since a list comprehension is an expression (rather than a block of statements), you can use it wherever you need an expression (e.g., as an argument in a function call, in a return statement, or as a subexpression of some other expression).
+* `for` 循环的常见用法是`检查可迭代对象`中的每个`项`，并`针对`每个`项`计算`表达式结果`，并考虑将`计算结果添加到某个列表`中来`构建`一个`新列表`。
 
-* for循环的常见用法是检查可迭代项中的每个项目，并通过将对部分或全部项目计算出的表达式的结果附加到列表中来构建新列表。 称为列表理解或listcomp的表达式形式使您可以简洁，直接地编写此常用习语。 由于列表推导是一个表达式（而不是语句块），因此可以在需要表达式的任何地方使用它（例如，用作函数调用中的参数，返回语句中或其他表达式的子表达式）。
+* 一种被称为`列表生成式`或 `listcomp` 的`表达式形式`使上述代码可以`更简洁`，`更易读`。
 
-### Set 生成式
+* `列表生成式`是一个`表达式`，而`不`是`语句块`，因此可以在需要`表达式`的`任何地方使用它`(如，用作`函数`调用中的`参数`，`返回语句中`或`其他表达式的子表达式`)。
+
+* `列表生成式`语法：`[expression for target in iterable lc-clauses]`。如果 `expression` 表示一个`元组`，`必须`使用`圆括号`。`lc-clauses` 是一系列的`子句`(`零个`或`多个`)。每个`子句`具有这`两种形式之一`：`for target in iterable`、`if expression`。`target`、`iterable` 的`含义`与标准 `for` 语句中`一样`。`if expression` 中的 `expression` 与标准 `if` 语句中`一样`。
+
+* `列表生成式`等同于 `for 循环`，该循环通过`重复调用`结果列表的 `append 方法`来构建`结果列表`。
+
+```python
+# 列表生成式
+result = [x + 1 for x in some_sequence]
+# 等价于
+result = []
+for x in some_sequence:
+    result.append(x + 1)
+```
+
+```python
+# 列表生成式(包含 if 语句)
+result = [x + 1 for x in some_sequence if x > 23]
+# 等价于
+result = []
+for x in some_sequence:
+    if x > 23:
+        result.append(x + 1)
+```
+
+```python
+# 列表生成式(包含嵌套的 for 子句，用于展平一个“列表的列表“为一个“列表“)
+result = [x for sublist in listoflists for x in sublist]
+# 等价于
+result = []
+for sublist in listoflists:
+    for x in sublist:
+        result.append(x)
+```
+
+* `列表生成式`中的 `for` 和 `if` 的`顺序`与等价的`循环语句`中的`顺序`是`相同`的，但是在`列表生成式中`，`嵌套`是`隐式`的。
+
+* `优先`创建`生成器`而不是列表：如果只想`循环`使用`一些值`，而`不`是需要一个可索引的`列表`，请使用`生成器表达式`。这样，避免创建列表，并`占用更少的内存`。
+
+* 在 `v2` 中，`列表生成式`执行后，列表生成式中的 `for` 子句的 `target 变量`将`保持`绑定到`最后一个值`，就`像`在 `for` 语句中`一样`。
+
+* 在 `v3` 中，`列表生成式`拥有它`自己`的`变量作用域`。
+
+* `除了 v2 中的列表生成式外`，其他`所有的生成式`(不管是在 `v2` 中，还是在 `v3` 中)都`拥有`自己的`变量作用域`。
+
+```python
+# v2 中
+# 生成器
+(i for i in [1, 2, 3]) # 执行后，i 未定义
+# 元组生成式
+tuple(i for i in [1, 2, 3]) # 执行后，i 未定义
+# 列表生成式
+[i for i in [1, 2, 3]] # 执行后，i == 3
+# set 生成式
+{i for i in [1, 2, 3]} # 执行后，i 未定义
+# 字典生成式
+{i:i for i in [1, 2, 3]} # 执行后，i 未定义
+```
+
+```python
+# v3 中
+# 生成器
+(i for i in [1, 2, 3]) # 执行后，i 未定义
+# 元组生成式
+tuple(i for i in [1, 2, 3]) # 执行后，i 未定义
+# 列表生成式
+[i for i in [1, 2, 3]] # 执行后，i 未定义
+# set 生成式
+{i for i in [1, 2, 3]} # 执行后，i 未定义
+# 字典生成式
+{i:i for i in [1, 2, 3]} # 执行后，i 未定义
+```
+
+### set 生成式
+
+* `set 生成式`与`列表生成式`具有`相同`的`语法`和`语义`，只是需要将方括号(`[]`)`换为`大括号(`{}`)。结果是一个 `set`，因此`项`的`顺序没有意义`。
+
+```python
+s = {n // 2 for n in range(10)}
+print(sorted(s))  # [0, 1, 2, 3, 4]
+# 如果是列表生成式会使每个项重复两次，set 会删除重复项。
+```
 
 ### 字典生成式
 
+* `字典生成式`与 `set 生成式`具有`相同`的`语法`，不同之处在于，`需要`使用`冒号连接两个表达式(key: value)`代替 for 子句前的`单个表达式`。结果是一个`字典`，因此`项`(`键值对`)的`顺序没有意义`。
+
+```python
+d = {n: n // 2 for n in range(5)}
+print(d)  # {0: 0, 1: 0, 2: 1, 3: 1, 4: 2} 顺序不定
+```
+
 ## break 语句
 
+* `break` 语句仅允许在`循环体内使用`。`执行 break` 后，`循环终止`。如果一个循环嵌套在其他循环内，则 `break` 仅`终止`最`内层`的`嵌套循环`。在实践中，`break` 通常位于循环体内 `if 的子句`中，因此可以`有条件地执行 break`。
+
+* `break` 的一种`常见用法`：在`循环语句`的`每次循环迭代`的`中间`确定`是否继续循环`(`loop and half` 结构)。
+
+```python
+# loop and half 结构
+while True:
+    x = get_next()
+    y = preprocess(x)
+    if not keep_looping(x, y):
+        break
+    process(x, y)
+```
+
 ## continue 语句
+
+The continue statement can exist only within a loop body. When continue executes, the current iteration of the loop body terminates, and execution continues with the next iteration of the loop. In practice, a continue is usually within a clause of an if in the loop body, so that continue executes conditionally.
+
+Sometimes, a continue statement can take the place of nested if statements within a loop.
+
+* 
 
 ## 循环语句中的 else 子句
 
