`控制流.md` completed

--- a/语言核心和内建模块/语言核心/控制流.md
+++ b/语言核心和内建模块/语言核心/控制流.md
@@ -333,7 +333,7 @@ print(d)  # {0: 0, 1: 0, 2: 1, 3: 1, 4: 2} 顺序不定
 
 ## break 语句
 
-* `break` 语句仅允许在`循环体内使用`。`执行 break` 后，`循环终止`。如果一个循环嵌套在其他循环内，则 `break` 仅`终止`最`内层`的`嵌套循环`。在实践中，`break` 通常位于循环体内 `if 的子句`中，因此可以`有条件地执行 break`。
+* `break` 语句仅允许在`循环体内使用`。`执行 break` 后，`循环终止`。如果一个循环嵌套在其他循环内，则 `break` 仅`终止`最`内层`的`嵌套循环`。在实践中，`break` 通常位于循环体内 `if 子句`中，这样可以`有条件地执行 break`。
 
 * `break` 的一种`常见用法`：在`循环语句`的`每次循环迭代`的`中间`确定`是否继续循环`(`loop and half` 结构)。
 
@@ -349,16 +349,117 @@ while True:
 
 ## continue 语句
 
-The continue statement can exist only within a loop body. When continue executes, the current iteration of the loop body terminates, and execution continues with the next iteration of the loop. In practice, a continue is usually within a clause of an if in the loop body, so that continue executes conditionally.
+* `continue` 语句只能`存在`于`循环体`内。`执行 continue` 后，循环体的`当前迭代`将`终止`，并`马上执行`循环的`下一次迭代`。在实践中，`continue` 通常位于循环体内 `if 子句`中，这样可以`有条件地执行 continue`。
 
-Sometimes, a continue statement can take the place of nested if statements within a loop.
-
-* 
+```python
+# 有时，continue 语句可以代替循环中的嵌套 if 语句
+for x in some_container:
+    if not seems_ok(x):
+        continue
+    lowbound, highbound = bounds_to_test()
+    if x < lowbound or x >= highbound:
+        continue
+    pre_process(x)
+    if final_check(x):
+        do_processing(x)
+# 等价代码，使用嵌套 if 语句，不使用 continue 语句
+for x in some_container:
+    if seems_ok(x):
+        lowbound, highbound = bounds_to_test()
+        if lowbound <= x < highbound:
+            pre_process(x)
+            if final_check(x):
+                do_processing(x)
+# 两种版本的工作方式相同，因此使用哪种版本取决于个人喜好和风格。
+# "The Zen of Python"(在交互式 Python 解释器提示符下键入 import this 看到)的原则之一是"Flat is better than nested"。
+# 使用 continue 语句是减少嵌套的一种方式。
+```
 
 ## 循环语句中的 else 子句
 
+* `while` 语句和 `for` 语句`可以包含`一个 `else 子句`。
+
+* 当循环`自然终止`(`for 迭代到迭代器的末尾`或 `while 的循环条件变为假`)，而`不`是循环`提前终止`(通过 `break`，`return` 或`异常`)，则`执行 else 子句`中的`语句`或`语句块`。
+
+* 当循环包含`一个`或`多个` `break` 语句时，`通常`需要`检查`循环是`自然终止`还是`提前终止`。这时就`可以使用 else 子句`。
+
+```python
+for x in some_container:
+    if is_ok(x):
+        break  # 提前终止(循环被 break)，不会执行 else 子句
+else:
+    print('Beware: no satisfactory item was found in container')
+    x = None
+```
+
 ## pass 语句
+
+Here’s an example of using pass in a conditional statement as a part of somewhat convoluted logic to test mutually exclusive conditions
+
+* `Python 复合语句体`不能为`空`；它必须`至少`包含`一条语句`。
+
+* 当在`语法上需要`语句但又`没有实质性`语句`提供`时，这时可以`使用`不执行任何操作的 `pass 语句`作为占位语句。
+
+```python
+# pass 语句示例
+if condition1(x):
+    process1(x)
+elif x > 23 or condition2(x) and x < 5:
+    pass  # 使用 pass 语句占位(不执行任何操作)
+elif condition3(x):
+    process3(x)
+else:
+    process_default(x)
+```
+
+* 对于`空`的`函数定义语句`以及`类定义语句`，使用 `docstring`，而`不`是 `pass 语句`：`def` 语句或 `class` 语句的`语句体`为`空`，应使用 `docstring`；当`编写了 docstring 后`，则`无需添加 pass 语句`占位了。
 
 ## try 语句和 raise 语句
 
+* `Python` 使用 `try 语句`来进行`异常处理`，该语句包括 `try 子句`，`except 子句`，`else 子句`和 `finally 子句`。
+
+```python
+# try 语句的语法
+try:
+    statement(s)
+except NameError as e:
+    statement(s)
+except SyntaxError as e:
+    statement(s)
+except:
+    statement(s)
+else:
+    statement(s)
+finally:
+    statement(s)
+```
+
+* `try 语句`的`说明`：
+
+  * `没有抛出`任何`异常`时，会`执行 else 子句`。
+
+  * 抛出的`异常`被`某个 except 子句捕获`，`执行该 except 子句`。
+
+  * 执行 `try 语句`的`最后时刻`，会`执行 finally 子句`。`执行完 finally 子句`，`整个 try 语句结束`。
+
+  * 执行 `finally 子句`的`时间点`有：`else 子句执行后`，`某条 except 子句执行后`，`抛出未被捕获的异常后`(`异常未被捕获`，`首先`执行 `finally 子句`，`然后`异常会`向外层继续传递`)。
+
+  * `控制流 1`：try -> else -> finally
+
+  * `控制流 2`：try -> except -> finally
+
+  * `控制流 3`：在 try 子句中抛出不能被捕获的异常，在 else 子句中抛出异常，在 except 子句中抛出异常 -> finally -> 向外层传递未捕获异常
+
+  * `控制流 4`：在 finally 子句中抛出异常 -> 向外层传递未捕获异常
+
+* 在代码中，可以使用 `raise 语句`显式地`抛出异常`。当代码`抛出一个异常`时，`程序`的正常控制流将`停止`，Python 将`寻找`一个`合适`的`异常处理程序`进行`异常处理`。
+
 ## with 语句
+
+* 与 `try/finally 语句`相比，`with 语句`可能是`更`具`可读性`和`实用性`的替代语句。
+
+```python
+# with 语句的语法
+with expression [as target]:
+    statement(s)
+```
