`控制流.md` completed

--- a/语言核心和内建模块/语言核心/控制流.md
+++ b/语言核心和内建模块/语言核心/控制流.md
@@ -394,8 +394,6 @@ else:
 
 ## pass 语句
 
-Here’s an example of using pass in a conditional statement as a part of somewhat convoluted logic to test mutually exclusive conditions
-
 * `Python 复合语句体`不能为`空`；它必须`至少`包含`一条语句`。
 
 * 当在`语法上需要`语句但又`没有实质性`语句`提供`时，这时可以`使用`不执行任何操作的 `pass 语句`作为占位语句。
@@ -448,9 +446,9 @@ finally:
 
   * `控制流 2`：try -> except -> finally
 
-  * `控制流 3`：在 try 子句中抛出不能被捕获的异常，在 else 子句中抛出异常，在 except 子句中抛出异常 -> finally -> 向外层传递未捕获异常
+  * `控制流 3`：`在 try 子句中抛出不能被捕获的异常`，`在 else 子句中抛出异常`，`在 except 子句中抛出异常` -> finally -> 向外层传递未捕获异常
 
-  * `控制流 4`：在 finally 子句中抛出异常 -> 向外层传递未捕获异常
+  * `控制流 4`：`在 finally 子句中抛出异常` -> 向外层传递未捕获异常
 
 * 在代码中，可以使用 `raise 语句`显式地`抛出异常`。当代码`抛出一个异常`时，`程序`的正常控制流将`停止`，Python 将`寻找`一个`合适`的`异常处理程序`进行`异常处理`。
 
