`函数.md` writing

--- a/语言核心和内建模块/语言核心/函数.md
+++ b/语言核心和内建模块/语言核心/函数.md
@@ -1,5 +1,44 @@
 # 函数
 
+* 典型的 `Python 程序`中的`大多数语句`都是`函数的一部分`。
+
+* 将代码以`函数的形式`进行组织能使代码更具`条理性`和`可读性`。
+
+* `函数体`中的代码`可能`比`模块顶层`的代码`快`。
+
+* `函数`是`一组`在被`调用`时才`执行`的`语句`。
+
+* Python 提供了许多`内置函数`，并`允许`程序员`定义`自己的`函数`。
+
+* `请求执行函数`称为`函数调用`。
+
+* `调用函数`时，可以通过`参数传递指定的数据`，函数在该数据上执行计算。
+
+* 在 `Python` 中，`函数始终会返回一个结果值`(`没有显式返回任何值`，函数`默认`会`返回 None`)。
+
+* 在 `class 语句`中定义的`函数`称为`方法`。对`函数`的`一般介绍`也`适用`于`方法`。
+
+* 在 `Python` 中，`函数`是`对象`(`值`)，`要和其他对象同等对待`。
+
+* 可以在调用另一个函数时将一个`函数作为参数`传递。同样，一个函数可以返回另一个`函数作为`调用的`返回值`。
+
+* 和任何其他对象一样，`函数`可以`绑定到变量`，可以是`容器中的项`，也可以是`对象的属性`。
+
+* 函数也可以是`字典中的键`。如果您需要`快速`找到给定`函数`的`逆函数`，则可以定义一个`字典`，其`键`和`值`是`函数`，然后使`字典双向`(`d[k] -> v, d[v] -> k`)。
+
+```python
+# 使字典双向(d[k] -> v, d[v] -> k)
+def make_inverse(inverse_dict):
+    for f in list(inverse_dict):
+        inverse_dict[inverse_dict[f]] = f
+    return inverse_dict
+
+
+inverse = make_inverse({sin: asin, cos: acos, tan: atan, log: exp})
+```
+
+* 在 `Python` 中，`函数`是`普通对象`这一事实`通常`可以`这样说`：`函数是一等对象`、`函数是一等公民`。
+
 ## def 语句
 
 ## 参数
