`函数.md` writing

--- a/语言核心和内建模块/语言核心/函数.md
+++ b/语言核心和内建模块/语言核心/函数.md
@@ -41,6 +41,30 @@ inverse = make_inverse({sin: asin, cos: acos, tan: atan, log: exp})
 
 ## def 语句
 
+* def 语句是定义函数的最常用方法。
+
+```python
+# def 语句的语法
+def function_name(parameters):
+    statement(s)
+```
+
+* `函数名`其实是一个`标识符`(`变量`)。当 `def 语句执行`时，这个`标识符`被`绑定`(或`重新绑定`)到对应的`函数对象`。
+
+* 参数(`parameters`)是一个`可选`的`标识符列表`，这些标识符被`绑定`为`调用`函数时`提供的值`，将这些`值`也称为参数(`arguments`)。
+
+* 为了`区分`定义参数(`parameters`)和调用参数(`arguments`)，parameters 称为`形参`，arguments 称为`实参`。
+
+* 在最简单的情况下，一个函数`没有任何参数`，这意味着该函数在`调用时不接受任何参数`。在这种情况下，`函数的定义`也必须在`函数名之后`加上`空括号`，同理对函数的`调用也是如此`。
+
+* 当函数确实`接受实参`时，`形参`包含`一个或多个标识符`，并用`逗号`(,)进行`分隔`。在这种情况下，对函数的`每次调用`都要`提供`与函数定义中列出的`形参`相`对应的`值(称为`实参`)。
+
+* `形参`是`函数`的`局部变量`，并且每次`对函数的调用`都会将`函数的命名空间`中的这些`局部变量`绑定到`调用者提供的`或`函数定义时提供的`对应的`值`(称为`实参`)。
+
+The nonempty block of statements, known as the function body, does not execute when the def statement executes. Rather, the function body executes later, each time you call the function. The function body can contain zero or more occurrences of the return statement, as we’ll discuss shortly.
+
+* 
+
 ## 参数
 
 ## 关键字参数
