--- a/语言核心和内建模块/语言核心/函数.md
+++ b/语言核心和内建模块/语言核心/函数.md
@@ -61,11 +61,41 @@ def function_name(parameters):
 
 * `形参`是`函数`的`局部变量`，并且每次`对函数的调用`都会将`函数的命名空间`中的这些`局部变量`绑定到`调用者提供的`或`函数定义时提供的`对应的`值`(称为`实参`)。
 
-The nonempty block of statements, known as the function body, does not execute when the def statement executes. Rather, the function body executes later, each time you call the function. The function body can contain zero or more occurrences of the return statement, as we’ll discuss shortly.
+* `执行` `def 语句`时，`函数体`内的代码块`不`会`执行`。每次`调用函数`时，`函数体`内的代码块都会`执行`。
+
+* `函数体`内可以出现`零个`或`多个` `return 语句`。
+
+```python
+# 实参可以是任何可以乘以 2 的值
+# 可以使用数字，字符串，列表或元组等作为实参来调用 twice
+# 在每种情况下，twice 都将返回与实参类型相同的新值
+def twice(x):
+    return x * 2
+```
+
+## 参数(parameters，形参)
+
+* `形参`对`调用`函数时`传递的值`进行`命名`，有时还会为`形参`提供`默认值`。
+
+* 每次`调用函数`时，每个`形参`都会被`绑定`在一个`新的局部命名空间`中。当`函数返回`或`以其他方式退出`时，此`命名空间`就会`被销毁`。当然，`调用者绑定函数的返回值`可以`使函数的返回值对象不被销毁`。
+
+* `标识符`表示`位置参数`(也称为`强制参数`)。每次`对函数的调用`都`必须`为每个`位置`参数`提供`一个对应的`值`(`实参`)。
+
+* 在逗号分隔的`参数列表`中，零个或多个`位置参数`后可以`跟`零个或多个`命名参数`(也称为`可选参数`，也称为`关键字参数`)
+
+```python
+# 命名参数，可选参数，关键字参数
+def function_name(..., identifier=expression)
+    pass
+```
+
+* `def 语句`会`求值`每个`命名参数`中的`表达式`，并在`函数对象的属性`中`保存`该`求值结果`的`引用`，这个值称为`参数默认值`。
+
+* 当函数调用时`未提供`与`命名参数`相对应的`实参`时，该调用会`将该命名参数绑定到其默认值上`。
+
+Note that Python computes each default value precisely once, when the def statement evaluates, not each time the resulting function gets called. In particular, this means that exactly the same object, the default value, gets bound to the named parameter whenever the caller does not supply a corresponding argument.
 
 * 
-
-## 参数
 
 ## 关键字参数
 
