`函数.md` writing

--- a/语言核心和内建模块/语言核心/函数.md
+++ b/语言核心和内建模块/语言核心/函数.md
@@ -93,9 +93,60 @@ def function_name(..., identifier=expression)
 
 * 当函数调用时`未提供`与`命名参数`相对应的`实参`时，该调用会`将该命名参数绑定到其默认值上`。
 
-Note that Python computes each default value precisely once, when the def statement evaluates, not each time the resulting function gets called. In particular, this means that exactly the same object, the default value, gets bound to the named parameter whenever the caller does not supply a corresponding argument.
+* 当 `def 语句执行`时，Python 会精确`计算一次`每个`默认值`，而`不是`在每次`调用函数时`求值默认值。这意味着，只要`调用者不提供`相应的`实际参数`，`命名参数`就将完全`使用相同`的`对象`(`默认值`)。
 
-* 
+* `命名参数`使用`可变`的`默认值`时，需要特别`小心`。
+
+* 在`不为命名参数`提供`实参`的情况下`调用函数`时，都`可以修改可变的默认值`(如列表)，这很`容易导致`不明原因的 `BUG`。
+
+* 当`命名参数`的`默认值`为`可变对象`并且在`函数体修改了命名参数`(`可变默认值`)时，`事情`可能会很`棘手`。
+
+```python
+def f(x, y=[]):
+    y.append(x)
+    return y, id(y)
+print(f(23)) # prints: ([23], 4302354376)
+print(f(42)) # prints: ([23, 42], 4302354376)
+# 每次使用单参数，调用 f 时，都会返回同一个 y 对象
+```
+
+```python
+def f(x, y=None):
+    if y is None: y = []
+    y.append(x)
+    return y, id(y)
+print(f(23)) # prints: ([23], 4302354376)
+prinf(f(42)) # prints: ([42], 4302180040)
+# 每次使用单参数，调用 f 时，都会返回不同的 y 对象
+```
+
+* 有时，`明确`想要`修改命名参数的默认值`，`通常`这是出于`缓存目的`。
+
+```python
+def cached_compute(x, _cache={}):
+    if x not in _cache:
+        _cache[x] = costly_computation(x)
+    return _cache[x]
+```
+
+* 通常`最好`还是通过`使用` `functools.lru_cache 装饰基础函数`来`获得`这种`缓存行为`(也称为 `memoization`)。
+
+* 在`形参列表`的`最后`，可以`选择性`使用 `*args` 和 `**kwargs` 这两种`特殊形式`中的一种或两种。名称(`args`、`kwargs`)`没有特殊之处`，可以在每种`特殊形式`中`使用任何合法的标识符`；`args` 和 `kwargs` 只是这时的`常用标识符`而已。如果`同时存在`这`两种形式`的参数，则带有`两个星号的形式`必须排在`最后`。
+
+* 指定 `*args` 形式的形参，会将调用中任何`未明确`指定的`位置参数`(额外的位置参数)`收集到`一个`元组对象`(可空，被绑定到 `args`)中。
+
+* 指定 `**kwargs` 形式的参数，会将调用中任何`未明确`指定的`命名参数`(额外的命名参数)`收集到`一个`字典对象`(可空，被绑定到 `kwargs`)中，该词典的 `item` 是`名称字符串`(key)/`实参值`(value)对。
+
+* 从 Python `3.6` 开始，`kwargs` 绑定到的`字典保留了`在调用中`传递`的额外的命名参数的`顺序`。这一点与`字典`的 `keys` 从 Python `3.6` 开始`有序`有关。
+
+```python
+# sum_args 函数可接受任意数量的位置参数，并返回他们的和
+def sum_args(*args)
+    return sum(args)
+print(sum_args(23, 42)) # 65
+```
+
+### 函数签名
 
 ## 关键字参数
 
