`函数.md` writing

--- a/语言核心和内建模块/语言核心/函数.md
+++ b/语言核心和内建模块/语言核心/函数.md
@@ -75,6 +75,8 @@ def twice(x):
 
 ## 参数(parameters，形参)
 
+* 参数类型分为：`位置`参数(`必选`参数)，`命名`参数，`元组`参数(`*`)，`字典`参数(`**`)
+
 * `形参`对`调用`函数时`传递的值`进行`命名`，有时还会为`形参`提供`默认值`。
 
 * 每次`调用函数`时，每个`形参`都会被`绑定`在一个`新的局部命名空间`中。当`函数返回`或`以其他方式退出`时，此`命名空间`就会`被销毁`。当然，`调用者绑定函数的返回值`可以`使函数的返回值对象不被销毁`。
@@ -148,9 +150,53 @@ print(sum_args(23, 42)) # 65
 
 ### 函数签名
 
-## 关键字参数
+* 函数的`参数数量`，以及`参数名称`，`位置参数的数量`，以及是否在参数列表末尾存在`单星号和双星号特殊形式`中的`一种还是两种`，`这些信息共同构成`了`函数签名`。`函数签名定义了调用函数的方式`。
+
+## 强制关键字(Keyword-only)参数(仅 v3)
+
+* 在 `v3` 中，一个 `def` 语句可以选择性地`指定`参数为`强制关键字参数`。在`调用函数`时，`必须`为强制关键字参数`传递`形如 `identifier=expression` 的`命名参数形式实参`。在 `*args`(没有，使用 \* 代表) 之`后`和 `**kwargs`(如果有) 之`前`的参数即为`强制关键字参数`。
+
+* 第一种形式：强制关键字参数可以指定为`简单标识符形式`(这时，它是强制性的，在调用该函数时必须传递相应的命名参数)。
+
+* 第二种形式：强制关键字参数可以指定为 `identifier=default 形式`(`命名参数形式`)(这时，它是可选的，调用该函数时不强制要求传递相应的参数。但是在传递该参数时，必须以命名参数的形式传递而不是位置参数)。
+
+* 通常为了更易读，`简单标识符形式`在`前`，`命名参数形式`在`后`。
+
+* 如果`存在`特殊形式参数 `*args`，则强制关键字参数序列必须在 `*args` 之后。
+
+* 如果`不存在`特殊形式参数 `*args`，则强制关键字参数序列必须在 `*` 之后。`*` 用于`占位`，表示其后为强制关键字参数。
+
+```python
+def f(a, *, b, c=56):  # b 和 c 都是强制关键字参数
+    return a, b, c
+
+f(12, b=34)  # 返回 (12, 34, 56)。c 是可选的，因为它有默认值
+f(12)  # 抛出一个 TypeError 异常。
+# 异常消息是: missing 1 required keyword-only argument: 'b'
+```
+
+* 如果指定了特殊形式参数 `**kwargs`，则它必须位于`参数列表`的`最后`(`强制关键字参数`(如果有)之`后`）
+
+```python
+def g(x, *a, b=23, **kwargs):  # b 是强制关键字参数
+    return x, a, b, kwargs
+
+g(1, 2, 3, c=99)  # 返回 (1, (2, 3), 23, {'c': 99})
+```
 
 ## 函数对象的属性
+
+* `def 语句`设置了`函数对象`的`某些属性`。
+
+* 属性 `__name__` 表示在 def 语句中作为`函数名`称给出的`标识符字符串`。`可以`将该属性`重新绑定`到任何`字符串值`，但是尝试`取消绑定`会`抛出异常`。
+
+* `__defaults__` 属性指向`命名参数`(`不包括强制关键字参数`)的`默认值`组成的`元组对象`或`None`(`没有命名参数`)。该属性可以`重新绑定`或`取消绑定`。该属性只能指向 `None 对象` 和 `tuple 类型对象`。
+
+### 文档字符串
+
+Another function attribute is the documentation string, also known as the docstring. You may use or rebind a function’s docstring attribute as __doc__. If the first state‐ ment in the function body is a string literal, the compiler binds that string as the function’s docstring attribute. A similar rule applies to classes (see “Class documen‐ tation strings” on page 103) and modules (see “Module documentation strings” on page 174). Docstrings usually span multiple physical lines, so you normally specify them in triple-quoted string literal form.
+
+* 
 
 ## 函数注解和类型提示
 
