`函数.md` writing

--- a/语言核心和内建模块/语言核心/函数.md
+++ b/语言核心和内建模块/语言核心/函数.md
@@ -194,11 +194,61 @@ g(1, 2, 3, c=99)  # 返回 (1, (2, 3), 23, {'c': 99})
 
 ### 文档字符串
 
-Another function attribute is the documentation string, also known as the docstring. You may use or rebind a function’s docstring attribute as __doc__. If the first state‐ ment in the function body is a string literal, the compiler binds that string as the function’s docstring attribute. A similar rule applies to classes (see “Class documen‐ tation strings” on page 103) and modules (see “Module documentation strings” on page 174). Docstrings usually span multiple physical lines, so you normally specify them in triple-quoted string literal form.
+* 另一个`函数属性`是`文档字符串`，也被称为 `docstring`。函数的文档字符串`被绑定`到函数对象的 `__doc__` 属性上。
+
+* 如果`函数体`中的`第一条语句`是`字符串字面量`，则编译器会将`该字符串绑定到`函数的 `__doc__` 属性上。类似的规则`适用于类`(`类文档字符串`)和`模块`(`模块文档字符串`)。
+
+* `文档字符串`通常`跨越多个物理行`，因此通常以`三引号字符串字面量形式`指定它们。
+
+```python
+def sum_args(*numbers):
+    """Return the sum of multiple numerical arguments.
+
+    The arguments are zero or more numbers.
+    The result is their sum.
+    """
+    return sum(numbers)
+```
+
+* `文档字符串`应该是开发者编写的任何 Python `代码的一部分`。它们的`作用类似于注释`，但它们的`适用性更广`，因为它们在`运行时`仍然`可用`(`除非使用 python -OO 运行程序`)。
+
+* 开发环境和工具可以使用`函数对象`，`类对象`和`模块对象`中的`文档字符串`来`提醒`程序员`如何使用这些对象`。
+
+* `doctest` 模块可以轻松`检查文档字符串`中的`示例代码`是否正确。
+
+* 为了使`文档字符串`尽可能有用，请`遵守`一些简单的`约定`：
+
+  * 文档字符串的`第一行`应该是`函数用途`的`简明摘要`，以大写字母开头，以句点结尾。简明摘要`不应该提到函数名`，除非该名称碰巧是自然语言的单词，并且可以自然而然地出现在摘要中。
+  
+  * 如果文档字符串为多行，则`第二行`应为`空行`。
+  
+  * `随后`的几行应形成`一个`或`多个段落`，并用`空行分隔`。这些`段落`用以`描述`函数的`参数`，`前提条件`，`返回值`和`副作用`(如果有)。
+  
+  * `进一步的解释`，`参考书目`和`用法示例`(应使用 `doctest` 模块`检查正确性`)可以选择添加在`文档字符串`的`末尾`。
+
+### 函数对象的其他属性
+
+* 除了函数对象的预定义属性外，`函数对象`还`可以具有`其他`任意属性`。
+
+* 要创建函数对象的属性，请在 `def 语句执行后`，将`值`通过`赋值语句`绑定到`相应的属性`引用`上`。
+
+* 请注意，这`不`是`常规`用法。通常，当要将某些`状态`(`data`)和某些`行为`(`code`)`组合`在一起时，`应该使用面向对象`的机制。
+
+* 但是，`有时`使用`这一技术`(可以将任意属性与函数对象关联起来)能够`带来一些便利`。
+
+```python
+# 对自身被调用次数进行计数
+def counter():
+    counter.count += 1
+    return counter.count
+counter.count = 0
+```
+
+## 函数注解和类型提示(仅 v3)
+
+In v3 only, every parameter in a def clause can be annotated with an arbitrary expression—that is, wherever within the def’s parameter list you can use an identifier, you can alternatively use the form identifier:expression, and the expression’s value becomes the annotation for that parameter name.
 
 * 
-
-## 函数注解和类型提示
 
 ## return 语句
 
