`函数.md` writing

--- a/语言核心和内建模块/语言核心/函数.md
+++ b/语言核心和内建模块/语言核心/函数.md
@@ -246,9 +246,34 @@ counter.count = 0
 
 ## 函数注解和类型提示(仅 v3)
 
-In v3 only, every parameter in a def clause can be annotated with an arbitrary expression—that is, wherever within the def’s parameter list you can use an identifier, you can alternatively use the form identifier:expression, and the expression’s value becomes the annotation for that parameter name.
+* `仅`在 `v3` 中，可以使用`任意表达式`对 def 语句中的`每个参数`进行`注解`。
+
+* 也就是说，在 def 的`参数列表`中可以使用 `identifier` 的`任何地方`，都可以`换作` `identifier:expression` 的形式，并且 `expression 的值`成为 `identifier 参数名`的`注解`。
+
+* 可以在def 语句的 `)` 和 `:` 之间使用 `->expression` 的形式来`注解`函数的`返回值`。`expression 的值`成为`名称 "return"` 的`注解`。
+
+```python
+def f(a:'foo', b) ->'bar':
+    pass
+
+print(f.__annotations__) # {'a': 'foo', 'return': 'bar'}
+```
+
+* `函数对象`的 `__annotations__` 属性是一个`字典对象`，它`保存`一些列`键值对` key/value。`key`：被注解的标识符(`identifier`)`字符串`；`value`：注解表达式(`expression`)的`求值结果`。
+
+* 可以将`注解`用于`任何目的`：`Python` 对它们`除了构造 __annotations__ 属性外`，`不执行任何操作`。
+
+* `注解的目的`是让`未来的假设性第三方工具`利用`注释`对有注解的函数执行`更彻底`的`静态检查`(如果想`尝试`这种静态检查，建议尝试 `mypy 项目`)。
+
+### 类型提示(Python 3.5 及以上)
+
+* 为了进一步`支持`未来的假设性`第三方工具`，`Python 3.5` 引入了一组`复杂`的`注释约定`，并在`标准库`中`引入`了一个`新的临时模块`，称为 `typing`，以`标准化`如何使用注解来表示`类型提示`(同样，`Python 不会`使用这些信息`执行任何操作`，但`第三方工具`可能`会`利用这种现在已经标准化的信息做一些操作。
+
+A provisional module is one that might change drastically, or even disappear, as early as the next feature release (so, in the future, Python 3.7 might not have the module typing in its standard library, or the module’s contents might be different). It is not yet intended for use “in production,” but rather just for experimental purposes.
 
 * 
+
+### 类型注解(Python 3.6 及以上)
 
 ## return 语句
 
