--- a/语言核心和内建模块/语言核心/函数.md
+++ b/语言核心和内建模块/语言核心/函数.md
@@ -244,7 +244,7 @@ def counter():
 counter.count = 0
 ```
 
-## 函数注解和类型提示(仅 v3)
+## 函数注解和类型提示(Function Annotations and Type Hints)(仅 v3)
 
 * `仅`在 `v3` 中，可以使用`任意表达式`对 def 语句中的`每个参数`进行`注解`。
 
@@ -265,19 +265,46 @@ print(f.__annotations__) # {'a': 'foo', 'return': 'bar'}
 
 * `注解的目的`是让`未来的假设性第三方工具`利用`注释`对有注解的函数执行`更彻底`的`静态检查`(如果想`尝试`这种静态检查，建议尝试 `mypy 项目`)。
 
-### 类型提示(Python 3.5 及以上)
+### 类型提示(Type hints)(Python 3.5 及以上)
 
 * 为了进一步`支持`未来的假设性`第三方工具`，`Python 3.5` 引入了一组`复杂`的`注释约定`，并在`标准库`中`引入`了一个`新的临时模块`，称为 `typing`，以`标准化`如何使用注解来表示`类型提示`(同样，`Python 不会`使用这些信息`执行任何操作`，但`第三方工具`可能`会`利用这种现在已经标准化的信息做一些操作。
 
-A provisional module is one that might change drastically, or even disappear, as early as the next feature release (so, in the future, Python 3.7 might not have the module typing in its standard library, or the module’s contents might be different). It is not yet intended for use “in production,” but rather just for experimental purposes.
+* 这个新的临时模块(`typing` 模块)在下一个功能发布时可能会`发生巨大变化`甚至`消失`的模块(即，将来 Python `3.7` `可能不会`在其标准库中`包含` typing 模块，或者该模块的内容可能会有所不同)。 这个模块`尚未`打算“`用于生产`”，而`仅用作实验目的`。
 
-* 
+### 类型注解(Type annotations)(Python 3.6 及以上)
 
-### 类型注解(Python 3.6 及以上)
+* 在重构`大型遗留代码`时，`类型注解`可能会`有所帮助`。对于`初学者`来说，它们`太过复杂`，但是对于具有 Python 经验的人来说，可以根据需要进行学习。
 
 ## return 语句
 
+* Python 中的 `return` 语句`只能`存在于`函数体内`，并且`可`以在其后`跟`一个`表达式`。执行 `return` 后，`函数终止`，表达式的`值`就是函数的`返回值`。
+
+* 函数通过`到达函数体的结尾`返回、通过`执行不带任何表达式的 return 语句`返回、通过`显式执行 return None` 返回，这些情况下函数的`返回值`均为 `None`。
+
+* 好的`返回`语句`风格`应遵守：
+
+  * `不要`在`函数体末尾`编写`没有表达式`的 `return` 语句。
+
+  * 当函数中的`某些` return 语句`具有表达式`时，则函数中的`所有` return 语句`都应具有表达式`。
+  
+  * `return None` 只能在为了`满足上一条样式要求`时`使用`。
+  
+  * Python `不强制`执行这些`样式约定`，但`遵循`这些约定会让代码`更清晰`，`更易读`。
+
 ## 调用函数
+
+```python
+# 函数调用语法
+function_object(arguments)
+```
+
+* function_object 可以是`任何函数对象`(或其他可调用对象)的引用。通常，它就是`函数`的`名称`。`括号`表示函数`调用操作`。在`最简单`的情况下，`实参`是由`零个或多个表达式`通过`逗号分隔`组成的，它们为函数的相应`形参提供值`。当`执行函数调用`时，`实参绑定到形参`上。函数体`执行后`，`函数的返回值`就是`函数调用表达式的值`。
+
+* 不要忘记使用 `()` 来调用函数。仅仅`写出`一个`函数对象`(或其他可调用对象)并`不调用它`。要`调用不带参数`的`函数`(或其他可调用对象)，`必须`在`函数名`(或可调用对象的`引用名`)`之后使用()`。
+
+### The semantics of argument passing
+
+In traditional terms, all argument passing in Python is by value (although, in modern terminology, to say that argument passing is by object reference is more precise and accurate; some, but not all, of this book’s authors also like the synonym call by sharing). For example, if you pass a variable as an argument, Python passes to the function the object (value) to which the variable currently refers, not the variable itself, and this value is bound to the parameter name in the function call namespace. Thus, a function cannot rebind the caller’s variables. However, if you pass a mutable object as an argument, the function may request changes to that object, because Python passes the object itself, not a copy. Rebinding a variable and mutating an object are totally disjoint concepts.
 
 ## 命名空间
 
