`函数.md` writing

--- a/语言核心和内建模块/语言核心/函数.md
+++ b/语言核心和内建模块/语言核心/函数.md
@@ -302,9 +302,49 @@ function_object(arguments)
 
 * 不要忘记使用 `()` 来调用函数。仅仅`写出`一个`函数对象`(或其他可调用对象)并`不调用它`。要`调用不带参数`的`函数`(或其他可调用对象)，`必须`在`函数名`(或可调用对象的`引用名`)`之后使用()`。
 
-### The semantics of argument passing
+### 参数传递的语义
 
-In traditional terms, all argument passing in Python is by value (although, in modern terminology, to say that argument passing is by object reference is more precise and accurate; some, but not all, of this book’s authors also like the synonym call by sharing). For example, if you pass a variable as an argument, Python passes to the function the object (value) to which the variable currently refers, not the variable itself, and this value is bound to the parameter name in the function call namespace. Thus, a function cannot rebind the caller’s variables. However, if you pass a mutable object as an argument, the function may request changes to that object, because Python passes the object itself, not a copy. Rebinding a variable and mutating an object are totally disjoint concepts.
+* 用传统术语来说，Python 中的`所有参数传递`都是`按值传递`的。
+
+* 如果将`变量`作为`参数传递`，Python 会将`变量`当前`引用的对象`(值)`传递`给函数，而不是变量本身，并且`此值绑定到`函数调用名称空间中的`参数名称`。
+
+* `函数无法重新绑定调用者的变量`。如果将`可变对象`作为`参数传递`，则该`函数`可能会对该`对象`进行`更改`，因为 Python 传递了对象本身，而不是副本。`重新绑定变量`和`修改对象`是`完全不同`的概念。
+
+```python
+def f(x, y):
+    x = 23
+    y.append(42)
+
+a = 77
+b = [99]
+f(a, b)
+print(a, b) # prints: 77 [99, 42]
+# 77 不可变对象，f 对 x 重新绑定了。对 a 没有影响
+# [99] 可变对象，f 修改了 y 引用的对象。b 和 y 引用同一个对象，所以 b 受到影响
+```
+
+### 各种参数
+
+* 只有表达式的参数称为`位置参数`。位置参数通过函数定义中的`位置`(顺序)`绑定`其相对应的`参数值`。
+
+* 位置参数`不需要`实参与形参`个数匹配`。如果位置`实参`比位置`形参`多，则`多余`的实参通过位置`绑定`到`命名参数`上(如果有)，其次如果函数的`签名包含` `*args` 特殊形式，则`多余`的实参值`绑定`到 `args` 的`元组`中。
+
+```python
+def f(a, b, c=23, d=42, *x):
+    print(a, b, c, d, x)
+
+f(1, 2, 3, 4, 5, 6) # prints 1 2 3 4 (5, 6)
+```
+
+* 在函数调用中，零个或多个`位置参数`后可跟零个或多个`命名参数`(也称为`关键字参数`)。`命名参数`需要跟在`关键字参数`之`后`。
+
+```python
+# 命名参数具有以下语法
+def f(identifier=expression):
+    pass
+```
+
+In the absence of any **kwds parameter, the identifier must be one of the parameter names used in the def statement for the function. The expression supplies the value for the parameter of that name. Many built-in functions do not accept named arguments: you must call such functions with positional arguments only. However, functions coded in Python accept named as well as positional arguments, so you may call them in different ways. Positional parameters can be matched by named arguments, in the absence of matching positional arguments.
 
 ## 命名空间
 
