完善环境管理 增加第三方包冻结和恢复的方法

--- a/其他/环境管理.md
+++ b/其他/环境管理.md
@@ -102,3 +102,15 @@ python -m pip uninstall openpyxl
 ```bash
 python -m pip list
 ```
+
+* 冻结当前环境的安装包，生成 requirements 格式文件
+
+```bash
+python -m pip freeze > packages
+```
+
+* 通过 requirements 格式文件安装包
+
+```bash
+python -m pip install -r packages
+```
