环境管理章节增加设置conda环境 bit

--- a/其他/环境管理.md
+++ b/其他/环境管理.md
@@ -17,6 +17,14 @@ python -m pip install openpyxl
 
 ## Conda
 
+* 设置 conda 为 32 bit：一般在需要安装 32 位 Python 时使用
+
+```bash
+# 0 : 64 bit
+# 1 : 32 bit
+set CONDA_FORCE_32BIT=1
+```
+
 * 更新
 
 ```bash
