--- a/语言核心和内建模块/语言核心/函数.md
+++ b/语言核心和内建模块/语言核心/函数.md
@@ -336,7 +336,7 @@ def f(a, b, c=23, d=42, *x):
 f(1, 2, 3, 4, 5, 6) # prints 1 2 3 4 (5, 6)
 ```
 
-* 在函数调用中，零个或多个`位置参数`后可跟零个或多个`命名参数`(也称为`关键字参数`)。`命名参数`需要跟在`关键字参数`之`后`。
+* 在函数调用中，零个或多个`位置参数`后可跟零个或多个`命名参数`(也称为`关键字参数`)。`命名参数`需要跟在`位置参数`之`后`。
 
 ```python
 # 命名参数具有以下语法
@@ -344,7 +344,60 @@ def f(identifier=expression):
     pass
 ```
 
-In the absence of any **kwds parameter, the identifier must be one of the parameter names used in the def statement for the function. The expression supplies the value for the parameter of that name. Many built-in functions do not accept named arguments: you must call such functions with positional arguments only. However, functions coded in Python accept named as well as positional arguments, so you may call them in different ways. Positional parameters can be matched by named arguments, in the absence of matching positional arguments.
+* 如果函数中`没有`任何 `**kwds 形式`的参数，则 `identifier 必须是`该函数的 `def 语句`中使用的`参数名称之一`。`expression` 为该名称的参数`提供值`。
+
+* `许多内置函数`都`不接受命名参数`，所以`必须`使用`位置参数`形式`调用`此类函数。
+
+* 用 `Python 编码的函数`接受`命名参数`和`位置参数`，所以可以`用不同的方式`调用它们。在`没有匹配的位置参数`的情况下，位置参数`可以由命名参数匹配`。
+
+* 函数调用必须通过`位置`或`命名参数`为每个`必需参数`提供一个`值`，为每个`可选参数`提供`一个或零个值`。
+
+```python
+def divide(divisor, dividend):
+    return dividend // divisor
+print(divide(12, 94))
+print(divide(dividend=94, divisor=12))
+```
+
+* 通过上例可以看出，可以通过传递`命名参数`可以调整`参数传递`的`顺序`。
+
+* `命名参数`在传递时，可以传递`指定值`，不传递则使用`默认值`。
+
+* 即使参数是`命名参数`，也可以按`位置参数`进行传递
+
+```python
+def f(middle, begin='init', end='finis'):
+    return begin + middle + end
+
+print(f('tini', end='')) # prints: inittini
+print(f('a', 'c', 't')) # prints: cat
+```
+
+* 在函数调用的`参数末尾`，可以`选择使用`特殊形式 `*seq` 和 `**dct` 中的一种或两种。
+
+* 如果`同时存在`两种形式，则带有`两个星号`的形式必须在`最后`。
+
+* `seq` 为`多余`位置参数组成的`元组`。`dct` 为`多余`命名参数组成的`字典`(key: 形参名, value: 实参值)。
+
+* 可以传递`任意可迭代对象`给 `*seq` 形式。
+
+* 可以传递 `key` 均为`字符串`的字典给 `**dct` 形式。
+
+```python
+def sum_args(*numbers):
+    return sum(numbers)
+
+print(sum_args(*d.values()))
+```
+
+* 调用签名中`没有`相应的`特殊形式`的函数时，也可以以 `*seq` 或 `**dct` 的形式传递参数。
+  * 必须确保可迭代的 `seq` 具有`正确数量`的`项`；
+  * 必须确保字典 `dct` 使用`正确`的`标识符字符串`作为其`键`；
+  * `否则`，调用操作将`引发异常`。
+
+* `v3` 中的`仅关键字参数`必须与`命名参数`相匹配，该参数必须是`显式`的或通过 `**dct 传递`的。
+
+* 在 `v3` 中，`函数调用`时`可以`出现`零次`或`多次` `*seq` 和/或 `**dct`。
 
 ## 命名空间
 
